--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <p>by liju....................................</p>
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-<img src="D:\pics\DSC_1346.jpg">
+<img src="D:\pics\DSC_1346.jpg" width="20%" height="20%">
 </body>
 </html>
